--- a/sctnet/res/layout/company_info_layout.xml
+++ b/sctnet/res/layout/company_info_layout.xml
@@ -99,23 +99,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/item_selector"
-            android:orientation="horizontal" >
+            android:orientation="horizontal" 
+            android:gravity="center_vertical"
+            >
 
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="20dp"
-                android:layout_centerVertical="true"
                 android:src="@drawable/dingwei" />
 
-            <TextView
-                android:id="@+id/company_address"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:text="北京市朝阳区北苑路乙108号"
-                 
-                android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:background="@drawable/item_selector"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:text="单位地址"
+                    android:textColor="#3B3B3B"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:id="@+id/company_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:text="北京市朝阳区北苑路乙108号"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+            </LinearLayout>
         </LinearLayout>
 
         <com.sctn.sctnet.view.DashedLineView
@@ -173,7 +188,8 @@
                 android:textSize="13sp" />
         </LinearLayout>
 
-        <!-- <LinearLayout
+        <!--
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
@@ -195,7 +211,8 @@
                 android:text="13987654321"
                 android:textColor="#3B3B3B"
                 android:textSize="13sp" />
-        </LinearLayout> -->
+        </LinearLayout>
+        -->
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -244,7 +261,6 @@
                 android:textColor="#3B3B3B"
                 android:textSize="13sp" />
         </LinearLayout>
-
     </LinearLayout>
 
 </ScrollView>
