--- a/sctnet/res/layout/contact_way_edit_activity.xml
+++ b/sctnet/res/layout/contact_way_edit_activity.xml
@@ -12,12 +12,54 @@
         android:orientation="vertical" >
 
         <LinearLayout
-            android:id="@+id/contactsname"
+            android:id="@+id/userphone"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/item_selector"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:text="*"
+                android:textColor="@color/red"
+                android:textSize="18dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/userphone_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="1dp"
+                android:paddingRight="10dp"
+                android:text="本人电话"
+                android:textColor="@color/lightBlack" />
+
+            <EditText
+                android:id="@+id/userphone_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/my_edittext"
+                android:inputType="phone"
+                android:text="" />
+        </LinearLayout>
+        
+        <LinearLayout
+            android:id="@+id/contactsname"
+            android:layout_width="fill_parent"
+            android:layout_height="55dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="1dp"
             android:background="@drawable/item_selector"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -74,48 +116,7 @@
                 android:text="" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/userphone"
-            android:layout_width="fill_parent"
-            android:layout_height="55dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="1dp"
-            android:background="@drawable/item_selector"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:gravity="center_vertical"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/userphone_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
-                android:paddingRight="5dp"
-                android:text="*"
-                android:textColor="@color/red"
-                android:textSize="18dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/userphone_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="1dp"
-                android:paddingRight="10dp"
-                android:text="本人电话"
-                android:textColor="@color/lightBlack" />
-
-            <EditText
-                android:id="@+id/userphone_value"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/my_edittext"
-                android:inputType="phone"
-                android:text="" />
-        </LinearLayout>
+        
 
         <LinearLayout
             android:id="@+id/email"
@@ -214,6 +215,39 @@
                 android:inputType="numberDecimal"
                 android:text="" />
         </LinearLayout>
+        
+        <LinearLayout
+            android:id="@+id/address"
+            android:layout_width="fill_parent"
+            android:layout_height="55dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="1dp"
+            android:background="@drawable/item_selector"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/address_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:text="通讯地址"
+                android:textColor="@color/lightBlack" />
+
+            <EditText
+                android:id="@+id/address_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/my_edittext"
+                android:inputType="text"
+                android:text="" />
+        </LinearLayout>
+        
     </LinearLayout>
 
 </ScrollView>
