--- a/sctnet/res/layout/information_list_item.xml
+++ b/sctnet/res/layout/information_list_item.xml
@@ -12,6 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16dp"
+        android:layout_toLeftOf="@+id/arrow"
+        android:layout_alignParentLeft="true"
         android:textColor="#000000"
         android:padding="10dp"/>
 
@@ -21,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_centerVertical="true"
         android:src="@drawable/arrow" />
 
