--- a/sctnet/res/layout/interview_invitation_item.xml
+++ b/sctnet/res/layout/interview_invitation_item.xml
@@ -6,22 +6,26 @@
     android:gravity="center_vertical"
     >
 
+    
+    
+    
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+         android:layout_centerInParent="true"
         android:layout_toLeftOf="@+id/ll_releaseTime"
+        android:layout_alignParentLeft="true"
         android:orientation="vertical"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="10dp"
-        android:padding="10dp" >
+        android:padding="5dp" >
 
         <TextView
+            android:id="@+id/post_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="2dp"
             android:singleLine="true"
             android:text="面试邀请"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
             android:textSize="16sp" />
 
         <TextView
@@ -35,13 +39,13 @@
             android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/content"
+            android:id="@+id/company_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="2dp"
             android:maxLines="2"
             android:ellipsize="end"
-            android:text="公司行业a阿斯顿发送到发送到发生发送阿斯顿发沙发沙发阿斯顿发撒打发斯蒂芬公司行业a阿斯顿发送到发送到发生发送阿斯顿发沙发沙发阿斯顿发撒打发斯蒂芬aaaa"
+            android:text="公司类型"
             android:textColor="#6E6E6E"
             android:textSize="13sp" />
     </LinearLayout>
@@ -50,32 +54,33 @@
         android:id="@+id/ll_releaseTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/ll_arrow"
         android:layout_centerInParent="true"
-        android:layout_marginRight="5dp"
-        android:orientation="vertical" >
+        android:layout_toLeftOf="@+id/arrow"
+        android:orientation="vertical"
+        android:padding="5dp" >
 
         <TextView
             android:id="@+id/read_time"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2013-01-21"
-            android:textColor="#6E6E6E"
+            android:textColor="@color/black"
             android:textSize="16dp" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/ll_arrow"
+        android:id="@+id/arrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="5dp" >
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="2dp"
             android:src="@drawable/arrow" />
     </LinearLayout>
 
