--- a/sctnet/res/layout/interview_notice_detail.xml
+++ b/sctnet/res/layout/interview_notice_detail.xml
@@ -24,6 +24,7 @@
             android:paddingTop="10dp" >
 
             <TextView
+                android:id="@+id/tv_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="XXXXXXX"
@@ -57,6 +58,29 @@
             android:background="@color/white"
             android:orientation="vertical"
             android:shrinkColumns="1" >
+            
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="面试岗位："
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/tv_postName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="java开发工程师"
+                    android:textColor="@color/blue" />
+            </TableRow>
 
             <TableRow
                 android:layout_width="match_parent"
@@ -69,16 +93,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
-                    android:text="时间："
+                    android:text="面试时间："
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/current_password"
+                    android:id="@+id/tv_interviewTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
                     android:text="2014年 1月 1日"
-                    android:textColor="@color/lightBlack" />
+                    android:textColor="@color/blue" />
             </TableRow>
 
             <TableRow
@@ -93,18 +117,18 @@
                     android:layout_height="wrap_content"
                     android:drawablePadding="10dp"
                     android:padding="10dp"
-                    android:text="地点："
+                    android:text="地址："
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/address"
+                    android:id="@+id/tv_address"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
                     android:padding="10dp"
                     android:singleLine="false"
                     android:text="北京市朝阳区北苑路乙108号北美国际商务中心"
-                    android:textColor="@color/lightBlack" />
+                    android:textColor="@color/blue" />
             </TableRow>
 
             <TableRow
@@ -147,11 +171,35 @@
                     android:textColor="@color/black" />
 
                 <TextView
-                    android:id="@+id/current_password"
+                    android:id="@+id/tv_contact"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
                     android:text="XXX"
+                    android:textColor="@color/lightBlack" />
+            </TableRow>
+            
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="10dp"
+                    android:padding="10dp"
+                    android:text="联系电话："
+                    android:textColor="@color/black" />
+
+                <TextView
+                    android:id="@+id/tv_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:text="80807979"
                     android:textColor="@color/lightBlack" />
             </TableRow>
         </TableLayout>
@@ -161,6 +209,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:paddingTop="10dp"
             android:background="@color/white"
             android:paddingLeft="10dp"
             android:text="如有事情不能参加，请及时和我们联系。"
@@ -182,7 +232,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@color/white"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:visibility="gone"
+             >
 
             <TextView
                 android:layout_width="match_parent"
