--- a/sctnet/res/layout/job_intention_edit_activity.xml
+++ b/sctnet/res/layout/job_intention_edit_activity.xml
@@ -277,36 +277,50 @@
             </ImageView>
         </RelativeLayout>
         
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/housewhere"
             android:layout_width="fill_parent"
             android:layout_height="55dp"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
-            android:layout_marginTop="1dp"
             android:background="@drawable/item_selector"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:focusable="true"  
-   			android:focusableInTouchMode="true" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/housewhere_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:textColor="@color/lightBlack"
                 android:text="住房要求" />
-
-            <EditText
+            <TextView
                 android:id="@+id/housewhere_value"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/my_edittext"
-                android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@+id/arrow6"
+                android:gravity="right"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="" />
-        </LinearLayout>
+
+            <ImageView
+                android:id="@+id/arrow6"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:contentDescription="@null"
+                android:shadowColor="#ffffffff"
+                android:shadowDx="0.0"
+                android:shadowDy="1.0"
+                android:shadowRadius="1.0"
+                android:src="@drawable/arrow" >
+            </ImageView>
+        </RelativeLayout>
+        
+        
        
     </LinearLayout>
 
