--- a/sctnet/res/layout/job_intention_item.xml
+++ b/sctnet/res/layout/job_intention_item.xml
@@ -3,16 +3,49 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/item_selector"
-    android:orientation="vertical"
-    android:padding="10dp" >
+    android:orientation="vertical" >
 
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="55dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@drawable/item_selector"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/job_intention"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="求职意向1"
+            android:textColor="@color/lightBlack" />
+
+        <ImageView
+            android:id="@+id/arrow1"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:contentDescription="@null"
+            android:shadowColor="#ffffffff"
+            android:shadowDx="0.0"
+            android:shadowDy="1.0"
+            android:shadowRadius="1.0"
+            android:src="@drawable/arrow" >
+        </ImageView>
+    </RelativeLayout>
+
+    <!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="5dp" >
 
-        <!-- 工作地区 -->
+        工作地区
 
         <TextView
             android:id="@+id/tv_workArea"
@@ -22,7 +55,7 @@
             android:text="北京"
             android:textColor="@color/lightBlack" />
 
-        <!-- 工作性质 -->
+        工作性质
 
         <TextView
             android:id="@+id/tv_workState"
@@ -32,7 +65,7 @@
             android:text="兼职"
             android:textColor="@color/lightBlack" />
 
-        <!-- 月薪 -->
+        月薪
 
         <TextView
             android:id="@+id/tv_wage"
@@ -43,7 +76,7 @@
             android:textColor="@color/lightBlack" />
     </LinearLayout>
 
-    <!-- 欲从事行业 -->
+    欲从事行业
 
     <TextView
         android:id="@+id/tv_industry"
@@ -53,7 +86,7 @@
         android:text="欲从事行业"
         android:textColor="@color/lightBlack" />
 
-    <!-- 欲从事岗位 -->
+    欲从事岗位
 
     <TextView
         android:id="@+id/tv_post"
@@ -62,5 +95,6 @@
         android:padding="5dp"
         android:text="欲从事岗位"
         android:textColor="@color/lightBlack" />
+    -->
 
 </LinearLayout>
