--- a/sctnet/res/layout/login_activity.xml
+++ b/sctnet/res/layout/login_activity.xml
@@ -102,6 +102,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         android:background="@drawable/blue_button_selector"
         android:enabled="true"
         android:shadowColor="#7f000000"
