--- a/sctnet/res/layout/read_my_resume_item.xml
+++ b/sctnet/res/layout/read_my_resume_item.xml
@@ -1,88 +1,83 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/item_selector"
-    android:orientation="horizontal"
     android:gravity="center_vertical"
-     >
-	
-    
-    <LinearLayout 
+    android:orientation="horizontal" >
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_toLeftOf="@+id/time"
+        android:layout_alignParentLeft="true"
         android:orientation="vertical"
-        android:layout_weight="7"
-        android:padding="10dp"
-        >
-        
-        <TextView 
-        android:id="@+id/company_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="公司名称"
-        android:padding="2dp"
-        android:singleLine="true"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        />
-        
-        <TextView 
-        android:id="@+id/company_type"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="公司类型"
-         android:padding="2dp"
-         android:singleLine="true"
-        android:textColor="#3B3B3B"
-        android:textSize="13dp"
-        />
-        
-        <TextView 
-        android:id="@+id/company_industry"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="公司行业"
-         android:padding="2dp"
-         android:singleLine="true"
-        android:textColor="#6E6E6E"
-        android:textSize="13dp"
-        />
-        
+        android:padding="5dp" >
+
+        <TextView
+            android:id="@+id/company_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:singleLine="true"
+            android:text="公司名称"
+            android:textColor="@color/black"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/company_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:singleLine="true"
+            android:text="公司类型"
+            android:textColor="#3B3B3B"
+            android:textSize="13dp" />
+
+        <TextView
+            android:id="@+id/company_industry"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:singleLine="true"
+            android:text="公司行业"
+            android:textColor="#6E6E6E"
+            android:textSize="13dp" />
     </LinearLayout>
-    
-    <LinearLayout 
+
+    <LinearLayout
+        android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_toLeftOf="@+id/arrow"
         android:orientation="vertical"
-        android:layout_weight="2"
-        >
-        
-        <TextView 
-        android:id="@+id/read_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="2013-01-21"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        />
-        
-    </LinearLayout>
-    
-    <LinearLayout 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        >
-        
-        <ImageView 
+        android:padding="5dp" >
+
+        <TextView
+            android:id="@+id/read_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/arrow"
-            />
-        
+            android:text="2013-01-21"
+            android:textColor="@color/black"
+            android:textSize="16dp" />
     </LinearLayout>
-    
-    
-</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:padding="5dp" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="2dp"
+            android:src="@drawable/arrow" />
+    </LinearLayout>
+
+</RelativeLayout>
