--- a/sctnet/res/layout/recruitment_company_list2.xml
+++ b/sctnet/res/layout/recruitment_company_list2.xml
@@ -81,29 +81,20 @@
             android:text="提供的职位："
             android:textColor="#FF666666" />
         
-        <ListView
-            android:id="@+id/recruiment_list"
-            android:layout_width="fill_parent"
+        
+        <TextView 
+            android:id="@+id/jobs"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:cacheColorHint="#00000000"
-            android:paddingRight="5dp"
+            android:layout_below="@+id/job_name"
             android:paddingBottom="5dip"
-            android:layout_toRightOf="@+id/job_name"
-            android:layout_alignTop="@+id/job_name"
-            android:divider="@color/background"
-            android:dividerHeight="1dp"
-            android:listSelector="@color/background" >
-        </ListView>
-
-        <!-- <TextView
-            android:id="@+id/job_name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/job_name"
-            android:layout_toRightOf="@+id/job_name"
-            android:paddingBottom="5dip"
+            android:paddingLeft="15dip"
+            android:paddingRight="15dip"
             android:paddingTop="5dip"
-            android:textColor="#FF666666" /> -->
+            android:textColor="#FF666666"
+            />
+        
+
     </RelativeLayout>
 
     <!--
