--- a/sctnet/res/layout/select_area_item.xml
+++ b/sctnet/res/layout/select_area_item.xml
@@ -18,6 +18,7 @@
         android:paddingBottom="10dp"
         android:textSize="16dp"
         android:textColor="@color/black"
+        android:singleLine="true"
         />
 	<ImageView
         android:id="@+id/image"
